@@ -72,6 +72,8 @@ extern Tcl_ObjCmdProc
     NsTclCacheAppendObjCmd,
     NsTclCacheCreateObjCmd,
     NsTclCacheEvalObjCmd,
+    NsTclCacheGetObjCmd,
+    NsTclCacheSetObjCmd,
     NsTclCacheFlushObjCmd,
     NsTclCacheIncrObjCmd,
     NsTclCacheExistsObjCmd,
@@ -258,6 +260,8 @@ static Cmd basicCmds[] = {
     {"ns_cache_append", NULL, NsTclCacheAppendObjCmd},
     {"ns_cache_create", NULL, NsTclCacheCreateObjCmd},
     {"ns_cache_eval", NULL, NsTclCacheEvalObjCmd},
+    {"ns_cache_get", NULL, NsTclCacheGetObjCmd},
+    {"ns_cache_set", NULL, NsTclCacheSetObjCmd},
     {"ns_cache_flush", NULL, NsTclCacheFlushObjCmd},
     {"ns_cache_incr", NULL, NsTclCacheIncrObjCmd},
     {"ns_cache_exists", NULL, NsTclCacheExistsObjCmd},
